--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,9 @@
         android:layout_height="wrap_content"
         android:text="Abrir Janela 02"
         android:textSize="30sp"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
